[gd_scene load_steps=8 format=2]

[ext_resource path="res://NPC/all-character-sprites.sprites/Shrimp_Jaques_1.tres" type="Texture" id=1]
[ext_resource path="res://player/NPC.gd" type="Script" id=2]
[ext_resource path="res://NPC/TalkingNPCs/TalkIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/BGM/Airpod.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 129.004

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 56.0357

[node name="Jacques" type="Node2D"]
script = ExtResource( 2 )
airpod_sound = ExtResource( 4 )

[node name="InteractionSphere" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionSphere"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/KinematicBody2D"]
shape = SubResource( 3 )

[node name="TalkIcon" parent="." instance=ExtResource( 3 )]
position = Vector2( 6, -84.5236 )

[connection signal="body_entered" from="InteractionSphere" to="." method="_on_InteractionSphere_body_entered"]
[connection signal="body_exited" from="InteractionSphere" to="." method="_on_InteractionSphere_body_exited"]
